# DSWx-Requirement-Verification

./: .gitignore  README.md  environment.yml  pyproject.toml  setup.py  verification_parameters.yml  verify_all_dswx.py
.github/workflows/: test.yml
dswx_verification/: __init__.py  constants.py  data_models.py  es_db.py  hls.py  labels.py  latex.py  mask_utils.py  metrics.py  random_sample.py  val_db.py
dswx_verification/data/: validation_table.csv  validation_table.geojson
dswx_verification/templates/: main_template.tex  slides.tex
notebooks/: 0_Create_Validation_Table.py  1_Generate_Verification_Data_and_Metrics.py  1_Verification_Metrics_at_Validation_Site.py  2_Summarize_and_Visualize_Data_at_Validation_Site.py  3_Aggregate_Data_across_Validation_Sites.py  4_Generate_Beamer_Slides.py  Dataset_Accounting_Optional.py  validation_parameters.yml  verification_parameters.yml
tests/: conftest.py  test_nbs.py
tests/data/: verification_parameters_template.yml
tests/data/DB/3_10/: site_name-3_10-classified_planet-20211011_155455_52_2262.tif
tests/data/DB/3_10/dswx/: OPERA_L3_DSWx-HLS_T15QYU_20211011T162221Z_20230906T035547Z_S2A_30_v1.1_B01_WTR.tif
